--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -100,30 +100,12 @@
   close modal
 **********************************/
 
-/* .portfolio-modal .sm-project {
-  position: absolute;
-  width: 100px;
-  left: 50px;
-} */
-
-.portfolio-modal .sm-project a {
-  display: inline-block;
-  width: 34px;
-  height: 34px;
-  border-radius: 50%;
-  margin-right: 15px;
-  background-color: #cbd1de;
-  color: #ffffff;
-  font-size: 16px;
-  line-height: 34px;
-  text-align: center;
-  text-decoration: none;
-  -webkit-transition: all 0.25s;
-  transition: all 0.25s;
+.portfolio-modal .social-media .demo:last-child {
+  margin-right: 0px;
 }
 
-.portfolio-modal .sm-project .github {
-  color: #fd9c0a;
+.portfolio-modal .sm-project .demo {
+  background: #0ab0fd;
 }
 
 .portfolio-modal .close-modal {
