--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -37,7 +37,9 @@
 }
 
 #portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content i {
-    margin-top: -12px;
+  border: 3px solid #ffffff;
+  padding: 10px;
+  margin-top: -12px;
 }
 
 #portfolio .portfolio-item .portfolio-link img {
