--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -148,7 +148,7 @@ h6 {
     right: 0;
     bottom: 0;
     left: 0;
-    background: url(../images/bg-header-3.png) no-repeat bottom center/cover;
+    background: url(../images/bg-header-5v4.jpg) no-repeat bottom center/cover;
     animation: kenburns 45s infinite;
 }
 
