--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -79,6 +79,16 @@
     }
 }
 
+@media(max-width:480px) {
+  .portfolio-modal .modal-content .modal-body img {
+    width: 100%;
+    height: 5px;
+    box-shadow: 10px 10px #c9c7c7;
+    border: 1px solid red;
+    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.9); */
+  }
+}
+
 /********************************************************
   Modal Portfolio
 ********************************************************/
