--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -219,5 +219,9 @@
     box-shadow: 10px 10px #c9c7c7;
     /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.9); */
   }
+
+  .visit-link {
+    font-size: 9px;
+  }
 }
 
